--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam</title>
+	<title>Vũ Trụ Sneaker chuyên giày sneaker outlet chính hãng uy tín giá rẻ nhất Việt Nam</title>
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
 		  "@type": "FAQPage",
 		  "mainEntity": [{
 			"@type": "Question",
-			"name": "Giày outlet là gì?",
+			"name": "Giày sneaker outlet là gì?",
 			"acceptedAnswer": {
 			  "@type": "Answer",
-			  "text": "<p>Giày outlet là <b>các sản phẩm đến từ các thương hiệu nổi tiếng trên thế giới. Tuy nhiên, do xu thế mới cập nhật quá nhanh, nhiều mẫu mã mới được tung ra thị trường nên các mẫu cũ trở nên lỗi mốt, không còn đủ size hoặc không được nhà sản xuất sản xuất thêm. Hoặc cũng có thể trong quá trình sản xuất gặp một vài lỗi nhỏ nên sản phẩm không đảm bảo chất lượng so với các sản phẩm khác. Bởi vậy mà giá bán của các mặt hàng này khá rẻ, giảm khá nhiều so với mức giá đã định.</b> Mua giày sneaker chính hãng giá rẻ nhất Thủ Đức tại <a href=https://www.vutrusneaker.shop/returns>Vũ trụ Sneaker</a> to initiate a return.</p>"
+			  "text": "<p>Giày sneaker outlet là <b>các sản phẩm đến từ các thương hiệu nổi tiếng trên thế giới. Tuy nhiên, do xu thế mới cập nhật quá nhanh, nhiều mẫu mã mới được tung ra thị trường nên các mẫu cũ trở nên lỗi mốt, không còn đủ size hoặc không được nhà sản xuất sản xuất thêm. Hoặc cũng có thể trong quá trình sản xuất gặp một vài lỗi nhỏ nên sản phẩm không đảm bảo chất lượng so với các sản phẩm khác. Bởi vậy mà giá bán của các mặt hàng này khá rẻ, giảm khá nhiều so với mức giá đã định.</b> Mua giày sneaker outlet chính hãng giá rẻ nhất Thủ Đức tại <a href=https://www.vutrusneaker.shop/returns>Vũ trụ Sneaker</a> to initiate a return.</p>"
 			}
 			}]
 		}
@@ -45,10 +45,10 @@
 		}
 	</script>
 	
-	<meta property="og:site_name" content="Vũ trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam" />
+	<meta property="og:site_name" content="Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng uy tín giá rẻ nhất Việt Nam" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://www.vutrusneaker.shop/" />
-	<meta property="og:title" content="Vũ trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam" />
+	<meta property="og:title" content="Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng uy tín giá rẻ nhất Việt Nam" />
 	<meta property="og:latitude" content="10.772105" />
 	<meta property="og:longitude" content="106.696137" />
 	<meta property="og:street_address" content="Khu phố 6" />
@@ -59,8 +59,8 @@
 	<meta property="og:email" content="vutrusneaker@gmail.com" />
 	<meta property="og:phone_number" content="+84988709195" />
 
-	<meta name="keywords" content="Vũ trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
-	<meta name="description" content="Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
+	<meta name="keywords" content="Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng uy tín giá rẻ nhất Việt Nam">
+	<meta name="description" content="Vũ Trụ Sneaker chuyên giày sneaker outlet chính hãng uy tín giá rẻ nhất Việt Nam">
 	<meta name="author" content="Vũ trụ Sneaker">
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -172,7 +172,7 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá
 													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
@@ -195,7 +195,7 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá
 													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
@@ -218,7 +218,7 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá
 													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
@@ -241,7 +241,7 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá
 													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
@@ -266,7 +266,7 @@
 	<div class="layout_padding collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Sản phẩm mới</strong></h1>
-			<p class="consectetur_text">Dòng sản phẩm vừa mới ra mắt nhưng đã được những tín đồ sneaker phản hồi tích
+			<p class="consectetur_text">Dòng sản phẩm vừa mới ra mắt nhưng đã được những tín đồ giày sneaker outlet phản hồi tích
 				cực.</p>
 			<div class="collection_section_2">
 				<div class="row">
@@ -274,7 +274,7 @@
 						<div class="about-img">
 							<button class="new_bt">New</button>
 							<div class="shoes-img"><img src="images/shoes-img1.png" alt=""></div>
-							<p class="sport_text">Giày thể thao nam</p>
+							<p class="sport_text">Giày sneaker outlet thể thao nam</p>
 							<div class="dolar_text"><strong style="color: #f12a47;">2.000.000 vnd</strong> </div>
 							<div class="star_icon">
 								<ul>
@@ -291,7 +291,7 @@
 					<div class="col-md-6">
 						<div class="about-img2">
 							<div class="shoes-img2"><img src="images/shoes-img2.png" alt=""></div>
-							<p class="sport_text">Giày thể thao nam</p>
+							<p class="sport_text">Giày sneaker outlet thể thao nam</p>
 							<div class="dolar_text"><strong style="color: #f12a47;">2.000.000 vnd</strong> </div>
 							<div class="star_icon">
 								<ul>
@@ -310,9 +310,9 @@
 	</div>
 	<div class="collection_section">
 		<div class="container">
-			<h1 class="new_text"><strong>Giày chạy đua</strong></h1>
-			<p class="consectetur_text">Một đôi giày chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô
-				cùng chắc chắn và có khả năng hấp thụ va đập. Vũ trụ sneaker chuyên giày outlet chính hãng giá rẻ uy tín nhất Việt Nam</p>
+			<h1 class="new_text"><strong>Giày sneaker outlet chạy đua</strong></h1>
+			<p class="consectetur_text">Một đôi giày sneaker outlet chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô
+				cùng chắc chắn và có khả năng hấp thụ va đập. Vũ trụ sneaker chuyên giày sneaker outlet chính hãng giá rẻ uy tín nhất Việt Nam</p>
 		</div>
 	</div>
 	<div class="collectipn_section_3 layuot_padding">
@@ -335,9 +335,9 @@
 	</div>
 	<div class="collection_section layout_padding">
 		<div class="container">
-			<h1 class="new_text"><strong>Sản phẩm mới về</strong></h1>
+			<h1 class="new_text"><strong>Sản phẩm giày sneaker outlet mới về</strong></h1>
 			<p class="consectetur_text">Nếu bạn có nhu cầu về những sản phẩm khác hãy liên hệ Vũ Trụ Sneaker để cập nhật
-				hoặc hỏi mẫu và size giày nhé.</p>
+				hoặc hỏi mẫu và size giày sneaker outlet nhé.</p>
 		</div>
 	</div>
 	<!-- new collection section end -->
@@ -347,7 +347,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Giày bán chạy nhất</p>
+						<p class="best_text">Giày sneaker outlet bán chạy nhất</p>
 						<div class="shoes_icon"><img src="images/shoes-img4.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -367,7 +367,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Giày bán chạy nhất</p>
+						<p class="best_text">Giày sneaker outlet bán chạy nhất</p>
 						<div class="shoes_icon"><img src="images/shoes-img5.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -387,7 +387,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Giày bán chạy nhất</p>
+						<p class="best_text">Giày sneaekr outlet bán chạy nhất</p>
 						<div class="shoes_icon"><img src="images/shoes-img6.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -409,7 +409,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Giày thể thao</p>
+						<p class="best_text">Giày sneaker outlet thể thao</p>
 						<div class="shoes_icon"><img src="images/shoes-img7.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -429,7 +429,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Giày thể thao</p>
+						<p class="best_text">Giày sneaker outlet thể thao</p>
 						<div class="shoes_icon"><img src="images/shoes-img8.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -449,7 +449,7 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="best_shoes">
-						<p class="best_text">Giày thể thao</p>
+						<p class="best_text">Giày sneaker outlet thể thao</p>
 						<div class="shoes_icon"><img src="images/shoes-img9.png" alt=""></div>
 						<div class="star_text">
 							<div class="left_part">
@@ -552,7 +552,7 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
+						<p class="dummy_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá rẻ nhất Việt Nam</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
