--- a/blogs.html
+++ b/blogs.html
@@ -164,7 +164,7 @@
 						Sneaker? </strong></h1>
 				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa
 					tùy thuộc vào từng hoàn cảnh khác nhau.<br><a
-						href="https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam
+						href="https://www.vutrusneaker.shop/blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">vutrusneaker.shop/blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam
 					</a></p>
 			</div>
 		</div>
@@ -180,7 +180,7 @@
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
 							<button class="seemore"> <a
-									href="blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">XEM
+									href="blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">XEM
 									THÊM</a></button>
 						</div>
 					</div>
@@ -221,7 +221,7 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
+						<p class="dummy_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá rẻ nhất Việt Nam</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
