--- a/blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
+++ b/blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
@@ -16,7 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ Sneaker?</title>
+	<title>Outlet là gì? Giày sneaker outlet là gì? Tại sao nên mua giày sneaker outlet tại Vũ trụ Sneaker?</title>
 	<meta name="keywords" content="Vũ trụ Sneaker">
 	<meta name="description" content="Vũ trụ Sneaker bán mọi loại giày. Chuyên giày outlet">
 	<meta name="author" content="Vũ trụ Sneaker Corporation">
@@ -94,7 +94,7 @@
 	<div class="about_main layout_padding">
 		<div class="collection_section">
 			<div class="container">
-				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ
+				<h1 class="new_text"><strong>Outlet là gì? Giày sneaker outlet là gì? Tại sao nên mua giày sneaker outlet tại Vũ trụ
 						Sneaker?</strong></h1>
 				<h2 class="new_text"><strong>1. Outlet là gì</strong></h2>
 				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa
@@ -106,14 +106,14 @@
 					đều do công ty sản xuất bán lẻ trực tiếp đến tay người dùng mà không qua bất kỳ cửa hàng trung gian
 					nào.
 				</p>
-				<h2 class="new_text"><strong>2. Giày outlet là gì</strong></h2>
-				<p class="consectetur_text">Hàng outlet thường là các sản phẩm đến từ các thương hiệu nổi tiếng trên thế
+				<h2 class="new_text"><strong>2. Giày sneaker outlet là gì</strong></h2>
+				<p class="consectetur_text">Giày sneaker outlet thường là các sản phẩm đến từ các thương hiệu nổi tiếng trên thế
 					giới. Tuy nhiên, do xu thế mới cập nhật quá nhanh, nhiều mẫu mã mới được tung ra thị trường nên các
 					mẫu cũ trở nên lỗi mốt, không còn đủ size hoặc không được nhà sản xuất sản xuất thêm. Hoặc cũng có
 					thể trong quá trình sản xuất gặp một vài lỗi nhỏ nên sản phẩm không đảm bảo chất lượng so với các
 					sản phẩm khác. Bởi vậy mà giá bán của các mặt hàng này khá rẻ, giảm khá nhiều so với mức giá đã
 					định. </p>
-				<p class="consectetur_text">Hàng outlet giải quyết được nhiều vấn đề cho cả nhà sản xuất và người tiêu
+				<p class="consectetur_text">Hàng sneaker outlet giải quyết được nhiều vấn đề cho cả nhà sản xuất và người tiêu
 					dùng. Nó giúp người dùng có cơ hội sở hữu hàng hiệu với mức giá rẻ mà vẫn đảm bảo chất lượng và thỏa
 					mãn “cơn khát” mua sắm. Về phía công ty sản xuất, nó giúp họ có thể giải quyết các sản phẩm tồn kho,
 					bị hết mùa hoặc bị lỗi. Điều này có ý nghĩa cực kỳ quan trọng đối với các nhà sản xuất. </p>
@@ -144,7 +144,7 @@
 					Hãy đến ngay với Vũ trụ Sneaker nơi chuyên bán giày Outlet với các lí do sau:</p>
 				<ul class="blog_li">
 					<li>Vũ trụ Sneaker là cửa hàng giày reseller của các hãng thời trang chính hãng như Nike, Adidas,..
-						Mang trong mình trọng trách mang đến cho các bạn những sản phẩm giày, đặc biệt là giày outlet
+						Mang trong mình trọng trách mang đến cho các bạn những sản phẩm giày, đặc biệt là giày sneaker outlet outlet
 						chất lượng, chính hãng, giá rẽ nhất trên thị trường.</li>
 					<li>Chế độ hậu mãi sau khi mua hàng của Vũ trụ Sneaker là thứ hai không ai xưng chủ nhật!! Với bảo
 						hành trọn đời keo chỉ lên đến 2 năm, đổi trả trong vòng 30 ngày nếu sản phẩm lỗi và với 7 ngày
@@ -154,10 +154,10 @@
 						lớn. </li>
 				</ul>
 				<p class="consectetur_text">Qua một số thông tin trên, Vũ trụ Sneaker hy vọng bạn đã có cái nhìn tổng
-					quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé!
+					quan hơn về giày sneaker outlet và đưa ra lựa chọn đúng đắn cho mình nhé!
 					<br>Linh bài viết: <a
-						href="https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">
-						https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html</a>
+						href="https://www.vutrusneaker.shop/blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">
+						https://www.vutrusneaker.shop/blogs/giay-sneaker-outlet-la-gi-noi-ban-giay-sneaker-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html</a>
 				</p>
 			</div>
 		</div>
@@ -196,7 +196,7 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
+						<p class="dummy_text">Vũ trụ Sneaker chuyên giày sneaker outlet chính hãng giá rẻ nhất Việt Nam</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
